--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -35,6 +35,24 @@ data <- read.csv(file="https://onlinestatbook.com/case_studies_rvls/physical_str
 
 ### scatterplot
 
+
+```{r}
+basicNN <- ggplot(data, aes(y = SIMS, x = ARM)) +
+geom_point() +
+labs(title = "SIMS and ARM") +
+theme(plot.title = element_text(hjust = 0.5))
+
+basicNN
+```
+
+
+
+
+
+
+
+
+
 ### Numerical results
 
 
