--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -52,6 +52,7 @@ basicNN
 cor(SIMS~ARM,data=data)
 ```
 
+The numerical results for sims-arm is 0.6860073. This means there is a far relationship between the two variable strength.
 
 ### Inferential  (Build model.1)
 
