info on model again

--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -61,6 +61,9 @@ model.1 <- lm(SIMS~ARM,data=data)
 summary.lm(model.1)
 ```
 
+The residual standard error is 1.226, while the r- squared is 0.4786 . The comparison between the two, we always look at the adjusted r-squared numbers. As you put more data in your model, the adjusted r-squared will go up.
+
+
 #### Predict at target point
 
 
