--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -75,7 +75,18 @@ The value that it predicted was 1.57 in change but it can go to -0.863 to an upp
 
 #### scatterplot with model fit
   
+```{r}
+basicNN <- ggplot(data, aes(y = SIMS, x = ARM)) +
+geom_point() +
+geom_smooth(method = "lm", se = FALSE) +
+labs(title = "SIMS ~ ARM") +
+theme(plot.title = element_text(hjust = 0.5))
 
+basicNN
+
+```  
+  
+  
 ## Model 2 SIM~GRIP
 
 ### Now add in scatterplot
