numerical results description

--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -107,6 +107,8 @@ mygrip
 cor(SIMS~GRIP,data=data)
 ```
 
+The numerical results for SIMS~GRIP is0.6398458. SIMS~ARM has a higher correlation than SIMS~GRIP.
+
 
 ### Inferential  (Build model.2)
   
