inferential build model 2 done

--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -112,6 +112,12 @@ The numerical results for SIMS~GRIP is0.6398458. SIMS~ARM has a higher correlati
 
 ### Inferential  (Build model.2)
   
+```{r}
+model.2 <- lm(SIMS~GRIP,data=data)
+summary.lm(model.2)
+```
+
+  
 
 #### predict model.2 at target point
 
