prediction model 2 target point done

--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -121,6 +121,11 @@ The residual standard error is 1.295 and the r squared is 0.4094 SIMS~ARRM has a
 
 #### predict model.2 at target point
 
+```{r}
+predict.lm(model.2,mydata,interval= "prediction" )
+```
+
+
 #### now add the model fit to our plot for model.2
   
 
