--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -144,7 +144,9 @@ mygrip
 
 ### Numerical results (cor)
 
-`
+```{r}
+cor(SIMS~ARM+GRIP,data=data)
+````
   
 ### Inferential  (Build 2-dimentional model.3)
 
