--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -148,7 +148,7 @@ mygrip
 cor(SIMS~ARM+GRIP,data=data)
 ````
   
-The correlation is larger  
+The correlation is larger.  
   
 ### Inferential  (Build 2-dimentional model.3)
 
@@ -156,6 +156,9 @@ The correlation is larger
 model.3 <- lm(SIMS~ARM+GRIP,data=data)
 summary.lm(model.3)
 ```
+
+The model has a residual standard error of 1.144 and a r squared of 0.5422. This model has a better residual error than SIMS~GRIP AND SIMS~ARM. Model is SIMS+0.37311 * ARM + 0.24470 * GRIP -5.33871.
+
 
 
 #### predict model.3 at target point
