--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -172,6 +172,15 @@ The interval goes from negative 1.716 and goes to a positive 2.9157.
 ## Comparing nested models ANOVA Test
 
 ### Model.1 vs Model.3
+
+```{r}
+anova(model.1,model.3)
+```
+```{r}
+anova(model.1)
+```
+
+
 ### Model.2 vs Model.3
 
 ## Informally compare Model.1 with model.2
