--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -180,9 +180,14 @@ anova(model.1,model.3)
 anova(model.1)
 ```
 
-Gives a p-value of0.00000499, which does not have any value. It is comparing the residual standard error of model 1.
+Gives a p-value of 0.00000499, which does not have any value. It is comparing the residual standard error of model 1.
 
 ### Model.2 vs Model.3
+
+```{r}
+anova(model.2, model.3)
+```
+
 
 ## Informally compare Model.1 with model.2
 
