--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -197,6 +197,6 @@ The P-value is a lot smaller than model 1,model 3 . There is a big difference be
 anova(model.1,model.2)
 ```
 
-
+We reduced the sum of square errors between these two models.This anova model does not show a p-value.
 
 
